[gd_scene load_steps=12 format=2]

[ext_resource path="res://examples/example.tscn" type="PackedScene" id=1]
[ext_resource path="res://examples/gesture-detection/gesture_detection_with_patterns_example.gd" type="Script" id=2]
[ext_resource path="res://addons/swipe-detector/swipe_detector.gd" type="Script" id=3]
[ext_resource path="res://addons/swipe-detector/icon.png" type="Texture" id=4]
[ext_resource path="res://examples/gesture-detection/trail_ghost.tscn" type="PackedScene" id=5]
[ext_resource path="res://examples/resources/spot_orange.png" type="Texture" id=6]
[ext_resource path="res://examples/resources/spot_red.png" type="Texture" id=7]
[ext_resource path="res://examples/resources/spot_yellow.png" type="Texture" id=8]
[ext_resource path="res://examples/resources/arrow.png" type="Texture" id=9]
[ext_resource path="res://examples/resources/Trail.tscn" type="PackedScene" id=10]
[ext_resource path="res://examples/resources/spot_green.png" type="Texture" id=11]

[node name="GestureDetectionWithPatternsExample" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="BackButton" parent="." index="1"]
margin_right = 293.0

[node name="SwipeDetector" type="Node" parent="." index="3"]
script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
distance_threshold = 80.0
minimum_points = 6

[node name="Circle" type="Node2D" parent="SwipeDetector" index="0"]
modulate = Color( 1, 1, 1, 0.386745 )
position = Vector2( -253.233, 91.9477 )

[node name="TrailGhost" parent="SwipeDetector/Circle" index="0" instance=ExtResource( 5 )]
position = Vector2( 687.957, 185.192 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="TrailGhost1" parent="SwipeDetector/Circle" index="1" instance=ExtResource( 5 )]
position = Vector2( 647.259, 111.332 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="TrailGhost2" parent="SwipeDetector/Circle" index="2" instance=ExtResource( 5 )]
position = Vector2( 648.766, 26.9211 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="TrailGhost3" parent="SwipeDetector/Circle" index="3" instance=ExtResource( 5 )]
position = Vector2( 731.67, -13.7771 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="TrailGhost4" parent="SwipeDetector/Circle" index="4" instance=ExtResource( 5 )]
position = Vector2( 816.081, -0.21106 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="TrailGhost5" parent="SwipeDetector/Circle" index="5" instance=ExtResource( 5 )]
position = Vector2( 843.213, 67.6192 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="TrailGhost6" parent="SwipeDetector/Circle" index="6" instance=ExtResource( 5 )]
position = Vector2( 841.706, 147.508 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="TrailGhost7" parent="SwipeDetector/Circle" index="7" instance=ExtResource( 5 )]
position = Vector2( 773.876, 191.221 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="Square" type="Node2D" parent="SwipeDetector" index="1"]
modulate = Color( 1, 1, 1, 0.386745 )
position = Vector2( 28.6394, 39.1909 )

[node name="Point1" parent="SwipeDetector/Square" index="0" instance=ExtResource( 5 )]
position = Vector2( 638.803, 322.103 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Point2" parent="SwipeDetector/Square" index="1" instance=ExtResource( 5 )]
position = Vector2( 727.367, 317.876 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Point3" parent="SwipeDetector/Square" index="2" instance=ExtResource( 5 )]
position = Vector2( 812.66, 315.007 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Point4" parent="SwipeDetector/Square" index="3" instance=ExtResource( 5 )]
position = Vector2( 815.821, 405.301 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Point5" parent="SwipeDetector/Square" index="4" instance=ExtResource( 5 )]
position = Vector2( 812.181, 489.712 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Point6" parent="SwipeDetector/Square" index="5" instance=ExtResource( 5 )]
position = Vector2( 728.581, 494.528 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Point7" parent="SwipeDetector/Square" index="6" instance=ExtResource( 5 )]
position = Vector2( 647.259, 485.446 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Point8" parent="SwipeDetector/Square" index="7" instance=ExtResource( 5 )]
position = Vector2( 641.818, 403.462 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="ZigZag" type="Node2D" parent="SwipeDetector" index="2"]
modulate = Color( 1, 1, 1, 0.386745 )
position = Vector2( -132.646, 43.7128 )

[node name="TrailGhost16" parent="SwipeDetector/ZigZag" index="0" instance=ExtResource( 5 )]
position = Vector2( 203.917, 464.565 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="TrailGhost17" parent="SwipeDetector/ZigZag" index="1" instance=ExtResource( 5 )]
position = Vector2( 241.088, 386.222 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="TrailGhost18" parent="SwipeDetector/ZigZag" index="2" instance=ExtResource( 5 )]
position = Vector2( 277.264, 294.274 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="TrailGhost19" parent="SwipeDetector/ZigZag" index="3" instance=ExtResource( 5 )]
position = Vector2( 328.514, 360.597 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="TrailGhost20" parent="SwipeDetector/ZigZag" index="4" instance=ExtResource( 5 )]
position = Vector2( 373.734, 441.993 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="TrailGhost21" parent="SwipeDetector/ZigZag" index="5" instance=ExtResource( 5 )]
position = Vector2( 421.969, 524.897 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="TrailGhost22" parent="SwipeDetector/ZigZag" index="6" instance=ExtResource( 5 )]
position = Vector2( 464.174, 443.501 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="TrailGhost23" parent="SwipeDetector/ZigZag" index="7" instance=ExtResource( 5 )]
position = Vector2( 486.784, 363.612 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="Match" type="VBoxContainer" parent="." index="4"]
visible = false
margin_left = 720.0
margin_top = 17.0
margin_right = 826.0
margin_bottom = 55.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 10

[node name="ResultLabel" type="Label" parent="Match" index="0"]
margin_right = 106.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Match Detected!"

[node name="ResultPattern" type="Label" parent="Match" index="1"]
margin_top = 24.0
margin_right = 106.0
margin_bottom = 38.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "<PATTERN>"

[node name="Sprite3" type="Sprite" parent="." index="5"]
self_modulate = Color( 1, 1, 1, 0.607726 )
position = Vector2( 347.822, 250.516 )
rotation = -2.08817
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Sprite4" type="Sprite" parent="." index="6"]
self_modulate = Color( 1, 1, 1, 0.607726 )
position = Vector2( 392.161, 56.9437 )
rotation = -0.440129
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Sprite8" type="Sprite" parent="." index="7"]
self_modulate = Color( 1, 1, 1, 0.607726 )
position = Vector2( 642.097, 176.434 )
rotation = 1.52707
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Sprite5" type="Sprite" parent="." index="8"]
self_modulate = Color( 1, 1, 1, 0.607726 )
position = Vector2( 140.122, 498.955 )
rotation = -1.06915
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Sprite6" type="Sprite" parent="." index="9"]
self_modulate = Color( 1, 1, 1, 0.607726 )
position = Vector2( 383.052, 527.784 )
rotation = -1.1145
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Sprite7" type="Sprite" parent="." index="10"]
self_modulate = Color( 1, 1, 1, 0.607726 )
position = Vector2( 256.616, 388.96 )
rotation = 1.09286
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="." index="11"]
self_modulate = Color( 1, 1, 1, 0.607726 )
position = Vector2( 753.447, 299.109 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Sprite1" type="Sprite" parent="." index="12"]
self_modulate = Color( 1, 1, 1, 0.607726 )
position = Vector2( 911.247, 431.686 )
rotation = 1.55076
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="." index="13"]
self_modulate = Color( 1, 1, 1, 0.607726 )
position = Vector2( 752.675, 586.657 )
rotation = 3.13335
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Trail" parent="." index="14" instance=ExtResource( 10 )]
texture = ExtResource( 11 )

[connection signal="pattern_detected" from="SwipeDetector" to="." method="_on_SwipeDetector_pattern_detected"]
[connection signal="swipe_ended" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_ended"]
[connection signal="swipe_started" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_started"]
[connection signal="swipe_updated" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_updated"]
